refactor: add async generating and prompts
